add optional mobile-toplink feature

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -37,7 +37,7 @@
 
                 </div>
 
-
+                <a name="top"></a>
                 <div id="question-nav" class="closed">
 
                     <div class="section instructions">
@@ -157,6 +157,9 @@
 
                     <div class="plant-list">
                         <div class="wait"></div>
+                    </div>
+                    <div class="toplink">
+                        <a href="#top" class="button">Back to top</a>
                     </div>
   
                 </div>
