add filter preview (enabled as mobile-filter-preview option)

--- a/gobotany/simplekey/templates/gobotany/results.html
+++ b/gobotany/simplekey/templates/gobotany/results.html
@@ -129,6 +129,8 @@
                       </span>
                     </h3>
 
+                    <div id="filters-preview"></div>
+
                     <div id="results-tabs">
                       {% handlebars 'species-view-tabs' %}
                         <li><a {{bindAttr class="App3.show_grid:current"}}
