Change obsolete name attribute to id in results template. (#308)

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -37,7 +37,7 @@
 
                 </div>
 
-                <a name="top"></a>
+                <a id="top"></a>
                 <div id="question-nav" class="closed">
 
                     <div class="section instructions">
