--- a/gobotany/site/templates/montshire/getting_started.html
+++ b/gobotany/site/templates/montshire/getting_started.html
@@ -153,7 +153,7 @@
                 </ul>
             </div>
 
-            <a href="{% url level1 'simple' %}"
+            <a href="{% url 'level1' 'simple' %}"
                 class="onward-btn">Onward to the Simple Key</a>
 {% endblock %}
 
