--- a/gobotany/simplekey/templates/partner/pilegroup.html
+++ b/gobotany/simplekey/templates/partner/pilegroup.html
@@ -1,7 +1,7 @@
 {% extends "partner/_page_full_sidebar.html" %}
 {% load simplekey_extras %}
 
-{% block title %}Partner {{ key|title }} Key for Plant Identification{% endblock %}
+{% block title %}{{ subgroups_list_page.title }}{% endblock %}
 
 {% block body_attributes %}class="skey groups-subgroups {{ key|title|lower }}"{% endblock %}
 
@@ -15,22 +15,34 @@
 {% endblock %}
 
 {% block main_content %}
-                <h1>Partner {{ key|title }} Key</h1>
+                <div id="breadcrumb">
+                    <ul>
+                        <li class="label nogloss">You are here:</li>
+                        <li class="nogloss"><a href="{% url 'level1' key %}">{{ key|title }} Key</a></li>
+                        <li class="this-page nogloss">{{ pilegroup.friendly_title|lower|capfirst }}</li>
+                    </ul>
+                </div>
+                
+                <h1>{{ pilegroup.friendly_title|lower|capfirst }}</h1>
 
-                <p class="question">{{ groups_list_page.main_heading }}</p>
-                <p class="tip">Please go through the groups in order.</p>
+                <p class="question">{{ subgroups_list_page.main_heading }}</p>
+                <p class="tip">Please go through the subgroups in order.</p>
 
-                {% for pilegroup, pilegroup_images, pilegroup_url in pilegroups %}
+                {% for pile, pile_images, pile_url in piles %}
+                    {% if pilegroup.slug == 'non-monocots' and piles|length == 4 and pile.slug == 'remaining-non-monocots' %}
+                        {# Exclude the big Remaining Non-Monocots pile if #}
+                        {# it has been split in two new piles at import.  #}
+                    {% else %}
                     <div class="list-item{% if forloop.last %} last{% endif %}">
                         <div class="img-gallery">
                             <div class="frame"></div>
                             <div class="img-container">
                                 <div class="images">
-                                    {% for content_image in pilegroup_images %}
+                                    {% for content_image in pile_images %}
                                         {% with content_image as i %}
                                             {% with i.creator as photographer %}
                                             <a href="{{ i.image_medium }}"
-                                                rel="shadowbox[{{ pilegroup.slug }}]"
+                                                rel="shadowbox[{{ pile.slug }}]"
                                                 title="{% photo_credit i i.scientific_name %}">
                                                 <img src="{{ i.thumb_large }}"
                                                     alt="{% photo_credit i i.scientific_name %}">
@@ -46,27 +58,31 @@
                             </div>
                         </div>
                         <div class="details">
-                            <h2>{{ pilegroup.friendly_title|lower|capfirst }}</h2>
-                            <p>{{ pilegroup.friendly_name|capfirst }}</p>
+                            <h2>{{ pile.friendly_title|capfirst }}</h2>
+                            <p>{{ pile.friendly_name|capfirst }}</p>
+
                             <p class="key-char">
                                 <span class="section-title">Key Characteristics</span>
-                                {{ pilegroup.key_characteristics|removetags:"div"|safe|capfirst }}
+                                {{ pile.key_characteristics|removetags:"div ul li"|safe }}
                             </p>
                             <p class="exceptions">
                                 <span class="section-title">Exceptions</span>
-                                {{ pilegroup.notable_exceptions|removetags:"div"|safe|capfirst }}
+                                {{ pile.notable_exceptions|removetags:"div ul li"|safe }}
                             </p>
-                            {% if pilegroup.video %}
+                            {% if pile.video %}
                             <p class="vid">
-                                {% with pilegroup.video.youtube_id as youtube_id %}
-                                {% include "gobotany/_simplekey_video_link.html" with item_type="group" %}
+                                {% with pile.video.youtube_id as youtube_id %}
+                                {% include "partner/_simplekey_video_link.html" with item_type="subgroup" %}
                                 {% endwith %}
                             </p>
                             {% endif %}
-                            <a class="plant-in-group" href="{{ pilegroup_url }}">My plant is in this group</a>
+                            <a class="plant-in-subgroup" href="{{ pile_url }}">My plant is in this subgroup</a>
                         </div>
                     </div>
+                    {% endif %}
                 {% endfor %}
+
+                {% include "partner/_plant_not_in_subgroup.html" %}
 {% endblock %}
 
 {% block sidebar_content %}
