Allow overriding header, footer and navigation for partner sites. (#396)

--- a/gobotany/site/templates/partner/_page_no_sidebar.html
+++ b/gobotany/site/templates/partner/_page_no_sidebar.html
@@ -1,7 +1,7 @@
 {% extends "partner/_base.html" %}
 
 {% block header %}
-    {% include "gobotany/_header.html" %}
+    {% include "partner/_header.html" %}
 {% endblock %}
 
 {% block body_content %}
@@ -15,5 +15,5 @@
 {% endblock %}
 
 {% block footer %}
-    {% include "gobotany/_footer.html" %}
+    {% include "partner/_footer.html" %}
 {% endblock %}
