Allow overriding the Help page and navigation for partner sites. (#396)

--- a/gobotany/site/templates/partner/_footer.html
+++ b/gobotany/site/templates/partner/_footer.html
@@ -21,7 +21,9 @@
                     <ul class="prime-items">
                         <li>{% nav_item 'Privacy Policy' site-privacy %}</li>
                         <li>{% nav_item 'Terms of Use' site-terms-of-use %}</li>
+                        {% comment %}
                         <li>{% nav_item 'Contact Us' site-contact %}</li>
+                        {% endcomment %}
                     </ul>
                 </div>
                 <div class="support">
