--- a/gobotany/taxa/templates/partner/genus.html
+++ b/gobotany/taxa/templates/partner/genus.html
@@ -1,4 +1,4 @@
-{% extends "gobotany/_page_full_sidebar.html" %}
+{% extends "partner/_page_full_sidebar.html" %}
 {% load simplekey_extras %}
 
 {% block title %}
@@ -11,7 +11,7 @@ Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
     </script>
 
     {# TODO: eventually move elsewhere #}
-    {% include "simplekey/_partner_site_js.html" %}
+    {% include "gobotany/_partner_site_js.html" %}
 {% endblock %}
 
 {% block js_require %}
@@ -26,7 +26,7 @@ Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
 {% block body_attributes %}id="genus" class="taxa"{% endblock %}
 
 {% block main_content %}
-                <h1>Genus: <i>{{ genus.name }}</i></h1>
+                <h1>Partner: Genus: <i>{{ genus.name }}</i></h1>
                 {% if common_name %}
                     <p class="common">{{ common_name|cut:"The "|lower }}</p>
                 {% endif %}
@@ -67,13 +67,15 @@ Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
                 {% endfor %}
                 </ul>
 
+                {% comment %}
                 <p class="visit-dkey">
-                  Visit this genus in the
-                  <a href="{% url 'dkey_page' genus.name.lower %}"
-                     >Dichotomous Key</a>
+                    Visit this genus in the
+                    <a href="{% url 'dkey_page' genus.name.lower %}"
+                        >Dichotomous Key</a>
                 </p>
+                {% endcomment %}
 {% endblock %}
 
 {% block sidebar_content %}
-    {% include "gobotany/_sidebar_items.html" %}
+    {% include "partner/_sidebar_items.html" %}
 {% endblock %}
