Add Privacy Policy and Terms of Use to sample partner site.
Break out the content of each so that a partner site does not need
to override the actual policy documents unless desired. (#398)

--- a/gobotany/site/templates/partner/_help_navigation.html
+++ b/gobotany/site/templates/partner/_help_navigation.html
@@ -19,8 +19,10 @@
             <li class="advanced-id-tools">{% nav_item 'Advanced ID Tools' advanced-id-tools %}</li>
             <li class="about">{% nav_item 'About Go Botany' site-about %}</li>
             <li class="contributors">{% nav_item 'Contributors' site-contributors %}</li>
+            {% endcomment %}
             <li class="privacy">{% nav_item 'Privacy Policy' site-privacy %}</li>
             <li class="terms-of-use">{% nav_item 'Terms of Use' site-terms-of-use %}</li>
+            {% comment %}
             <li class="contact">{% nav_item 'Contact Us' site-contact %}</li>
             {% endcomment %}
         </ul>
