--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* *** Go Botany master styles file ***
  Please edit only the .scss source and use Compass to auto-generate the .css.
  The generated .css is kept in the repository to allow easy deployment.
@@ -884,6 +885,7 @@ body.skey.results .working-area #slider .thumb { background: -webkit-gradient(li
 body.skey.results .working-area #slider .label { font-size: 16px; position: relative; top: -36px; -moz-user-select: -moz-none; -khtml-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none; }
 body.skey.results img.char-value-larger { height: 160px !important; /* Consistent height for popup character value drawings */ }
 body.skey .toplink { display: none; }
+body.skey #filters-preview { display: none; }
 
 /* Experiment by Brandon */
 ul.get-more-questions-menu { -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.6); -moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.6); box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.6); z-index: 200; position: absolute; right: 0; display: block; bottom: 110%; border: 1px solid black; font-size: 12px; text-indent: 0px; /* undo the -9000px */ white-space: nowrap; }
@@ -905,7 +907,12 @@ ul.get-more-questions-menu ul li[data-character] { color: black; }
   body.skey.results.mobile-wide .species-count-heading { left: -235px; }
   body.skey.results.mobile-wide #results-tabs li:first-child a { margin-left: 32px; }
   body.skey.results.mobile-toplink { /* Mobile variant with floating 'back to top' link */ }
-  body.skey.results.mobile-toplink .toplink { position: fixed; left: 0; bottom: 0; width: 100%; text-align: right; } }
+  body.skey.results.mobile-toplink .toplink { position: fixed; left: 0; bottom: 0; width: 100%; text-align: right; }
+  body.skey.mobile-preview-filters #filters-preview { display: block; border-bottom: solid 1px black; }
+  body.skey.mobile-preview-filters #filters-preview li { list-item-type: none; display: none; }
+  body.skey.mobile-preview-filters #filters-preview li.answered { display: inline; }
+  body.skey.mobile-preview-filters #filters-preview li .name { font-weight: bold; }
+  body.skey.mobile-preview-filters #filters-preview .clear-filter { display: none; } }
 /* Landscape-orientation styles */
 @media only screen and (min-width: 401px) and (max-width: 600px) { body.skey { /* end &.results.mobile-wide */ }
   body.skey.results #intro-overlay { left: 26% !important; }
