--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -1625,6 +1625,7 @@ ul.get-more-questions-menu {
                     padding-right: 50px;
                 }
                 .gloss {
+                    border-bottom: 0;
                     color: inherit;
                     cursor: default;
                     &:hover {
